--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🛰️ GPS Durumu 37. Hafta Raporu</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js.download"></script>
+    <script src="./chart.min.js.download"></script>
 
     <style>
         * {
